[gd_scene load_steps=2 format=1]

[ext_resource path="res://tile.gd" type="Script" id=1]

[node name="tile" type="Node2D"]

script/script = ExtResource( 1 )

[node name="center" type="Polygon2D" parent="."]

transform/pos = Vector2( -4, -4 )
polygon = Vector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )
uv = Vector2Array(  )
color = Color( 0.227451, 0.486275, 0.352941, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="in_x" type="Polygon2D" parent="."]

transform/pos = Vector2( -5, -4 )
polygon = Vector2Array( 0, 0, 1, 0, 1, 8, 0, 8 )
uv = Vector2Array(  )
color = Color( 0.188235, 0.407843, 0.313726, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="in_y" type="Polygon2D" parent="."]

transform/pos = Vector2( -4, -5 )
polygon = Vector2Array( 0, 0, 8, 0, 8, 1, 0, 1 )
uv = Vector2Array(  )
color = Color( 0.188235, 0.407843, 0.313726, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="out_x" type="Polygon2D" parent="."]

transform/pos = Vector2( 4, -4 )
polygon = Vector2Array( 0, 0, 1, 0, 1, 8, 0, 8 )
uv = Vector2Array(  )
color = Color( 0.188235, 0.407843, 0.313726, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="out_y" type="Polygon2D" parent="."]

transform/pos = Vector2( -4, 4 )
polygon = Vector2Array( 0, 0, 8, 0, 8, 1, 0, 1 )
uv = Vector2Array(  )
color = Color( 0.188235, 0.407843, 0.313726, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0


